--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,31 @@ body {
   background: #0f172a;
   color: #e5e7eb;
 }
+
+main {
+  line-height: 1.6;
+}
+
+h1 {
+  font-size: 3.2rem;
+  margin-bottom: 1.5rem;
+}
+
+h2 {
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+}
+
+ul {
+  padding-left: 1.2rem;
+}
+
+li {
+  margin-bottom: 0.5rem;
+}
+
+a {
+  color: #38bdf8;
+  font-weight: 500;
+}
+
